data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1391.wast
;; 2. **Test: Missing Operand Before `br_if`**:    - **Description**: Create a scenario where `br_if` is executed without the necessary condition operand on the stack. This checks how each engine handles the missing operand condition.    - **Constraint Checked**: Validates that the operand stack has the required `i32` condition before executing `br_if`.    - **Relation to Incorrect Branch Target Resolution**: Ensures the engine correctly identifies and reports missing operands, preventing incorrect branch resolutions due to stack underflows.

(assert_invalid
  (module (func $test_missing_operand
    (block (result i32) (br_if 0))
  ))
  "type mismatch"
)